verified checklist and added events registration and foilters

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -173,7 +173,7 @@
         <div class="error-icon">⚠️</div>
         <h1 class="error-title">This site can't be reached</h1>
         <div class="error-message">
-            <p><strong>fcit-developers.club</strong> took too long to respond.</p>
+            <p><strong>taakra2026.com</strong> took too long to respond.</p>
             <p>Try:</p>
             <ul style="padding-left: 20px; margin-top: 10px;">
                 <li>Checking the connection</li>
