--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/CloudinaryImageUploader" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/takra.png" />
     <script src="https://www.google.com/recaptcha/api.js?render=6LcS2-IrAAAAAKNNKYcJuWSmCIm1IlBlSJwGGQqH" async defer></script>
     <title>Taakra</title>
   </head>
